--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,10 +5,48 @@
    author = "Wikipedia",
    title = "Cut-up technique --- Wikipedia{,} The Free Encyclopedia",
    year = "2009",
-   url = "\url{http://en.wikipedia.org/w/index.php?title=Cut-up_technique&oldid=319936739}",
+   howpublished = "\url{http://en.wikipedia.org/w/index.php?title=Cut-up_technique&oldid=319936739}",
    note = "[Online; accessed 21-October-2009]"
  }
-  
+
+@misc{splitter,
+    author = "David James",
+    title  = "Lingua::EN::Splitter",
+    year   = "2005",
+    howpublished    = "\url{http://search.cpan.org/~splice/Lingua-EN-Segmenter-0.1/lib/Lingua/EN/Splitter.pm}",
+    note   = "[Software]"
+}  
+
+@misc{phoneme,
+    author = "Thomas Thurman",
+    title  = "Lingua::EN::Phoneme",
+    year   = "2009",
+    howpublished    = "\url{http://search.cpan.org/~marnanel/Lingua-EN-Phoneme-0.01/lib/Lingua/EN/Phoneme.pm}",
+    note   = "[Software]"
+}  
+
+@misc{syllable,
+    author = "Greg Fast",
+    title  = "Lingua::EN::Syllable",
+    year   = "1999",
+    howpublished    = "\url{http://search.cpan.org/~gregfast/Lingua-EN-Syllable-0.251/Syllable.pm}",
+    note   = "[Software]"
+}  
+
+@misc{sqlite3,
+    title  = "SQLite3",
+    year   = "2009",
+    howpublished    = "\url{http://www.sqlite.org/}",
+    note   = "[Software]"
+}  
+
+@misc{perl,
+    title  = "Perl 5.10",
+    year   = "2009",
+    howpublished    = "\url{http://www.perl.org/}",
+    note   = "[Software]"
+}  
+
 @Book{Hart96,
   author =       {Charles O. Hartman},
   title =        {Virtual Muse: Experiments in Computer Poetry},
