commit old typo fix in survey just to get it out of diff

--- a/survey/natesurvey.tex
+++ b/survey/natesurvey.tex
@@ -226,7 +226,7 @@ approach uses a 4 step \emph{Retrieve}, \emph{Reuse}, \emph{Revise}, and
 
 First, in the retrieve step, a verse example from some corpus is selected for
 each sentence of input. In the reuse step, each sentence of input is
-restrucuted, added to, and subtracted from to mirror the verse case selected
+restructured, added to, and subtracted from to mirror the verse case selected
 from a corpus.  Next, a revise step allows a human or another program to
 evaluate the output for satisfaction according to certain poetic criteria.
 Finally, if it is determined that the resulting poem is fit, it is added to a
