--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -47,6 +47,13 @@
     note   = "[Software]"
 }  
 
+@misc{scandroid,
+    title = "Scandroid",
+    author = "Charles O. Hartman",
+    howpublish = "\url{http://cherry.conncoll.edu/cohar/Programs.htm}",
+    note ="[Software]"
+}
+
 @Book{Hart96,
   author =       {Charles O. Hartman},
   title =        {Virtual Muse: Experiments in Computer Poetry},
